--- a/src/sass/Components/TaskList.sass
+++ b/src/sass/Components/TaskList.sass
@@ -11,12 +11,14 @@
   -webkit-box-sizing: border-box
   -moz-box-sizing: border-box
   box-sizing: border-box
-  box-shadow: 4px 0px 23px rgba(0, 0, 0, 0.25)
+  box-shadow: 4px 0 23px rgba(0, 0, 0, 0.25)
+
   img
     height: 43px
     width: 43px
     margin-bottom: 24px
     filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.25))
+
   h1
     font-size: 24px
     line-height: 24px
@@ -37,6 +39,7 @@
   -webkit-box-sizing: border-box
   -moz-box-sizing: border-box
   margin-bottom: 24px
+
   button
     background: transparent
     border: none
@@ -48,10 +51,12 @@
     height: 24px
     margin-right: 10px
     padding: 0
+
     img
       width: 24px
       height: 24px
       margin-bottom: 0
+
   input
     background: transparent
     border: none
@@ -71,6 +76,7 @@
   justify-content: space-around
   box-sizing: border-box
   margin-bottom: 24px
+
   &__item
     background: transparent
     border: none
@@ -82,5 +88,6 @@
     border-radius: 52px
     box-sizing: border-box
     padding: 8px
+
     &:hover
       cursor: pointer
