Изменяет подход к работе с Redux
-Заменил работу с громоздкого ActionCreator\reducer\types на slice'ы.
-Реализовал получение геоданных через геокодер Mapbox и их сохранение в стейт.

--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -5,4 +5,4 @@
 @import "Components/RegistrationPage"
 @import "Components/Map"
 @import "Components/TaskList"
-@import "Components/NewTaskMenu"
+@import "../pages/mapPage/components/NewTaskMenu/NewTaskMenu.module"
