--- a/src/pages/mapPage/components/NewTaskMenu/NewTaskMenu.module.sass
+++ b/src/pages/mapPage/components/NewTaskMenu/NewTaskMenu.module.sass
@@ -23,3 +23,54 @@
   &__desc
     height: 32px !important
     padding: 8px !important
+  &__timePickWrapper
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 100%
+    margin-bottom: 24px
+    span
+      font-size: 16px
+      line-height: 16px
+      font-weight: 400
+  &__switchWrapper
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 100%
+    margin-bottom: 24px
+    p
+      font-size: 16px
+      line-height: 16px
+      font-weight: 400
+      margin: 0
+      span
+        font-size: 12px
+        line-height: 12px
+        font-weight: 500
+        color: #9B9B9B
+  &__buttonWrapper
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 100%
+    &_create:hover
+      background: #85EBA2
+    button
+      outline: none
+      background: #E8EAED
+      width: 88px
+      height: 32px
+      border-radius: 50px
+      border: none
+      font-size: 16px
+      line-height: 16px
+      font-weight: 400
+      padding: 8px 16px
+      box-sizing: border-box
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      cursor: pointer
+\:root
+  --rdp-accent-color: #f3c247
+  --rdp-background-color: #f3c247
