--- a/src/sass/Components/TaskList.sass
+++ b/src/sass/Components/TaskList.sass
@@ -1,9 +1,10 @@
 .taskbar
-  position: fixed
+  //position: fixed
   z-index: 2
   height: 100vh
   background: #FBFBFB
   width: 407px
+  min-width: 407px
   display: flex
   flex-direction: column
   align-items: center
