Изменяет поведения маркера для добавления задачи

--- a/src/sass/Components/LoginPage.sass
+++ b/src/sass/Components/LoginPage.sass
@@ -19,6 +19,8 @@
     font-size: 15px
     font-weight: 500
     cursor: pointer
+    &:visited
+      text-decoration: none
 
 .form-container
   display: flex
